# ocxtools

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  __main__.py  environment.yml  genindex.html  html_links.py  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  start_server.py
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: documentation.yaml  python-publish.yml
_modules/: index.html
_sources/: modules.rst.txt
docs/: conf.py  modules.rst  requirements.txt
models/: M1.3docx  M5.3docx  M8.3docx
ocxtools/: __init__.py  async_rest_client.py  builder.py  cli.py  config.py  config.yaml  conversion_rule.py  converter.py  exceptions.py  loader.py  ocx_converter.py  ocx_version_manager.py  parser.py  prototype.py  renderer.py  validator_client.py
ocxtools/clients/: clients.py
ocxtools/console/: console.py
ocxtools/context/: context_manager.py
ocxtools/converter/: converter.py
ocxtools/dataclass/: dataclasses.py
ocxtools/docker/: __init__.py  cli.py
ocxtools/interfaces/: interfaces.py
ocxtools/loader/: loader.py
ocxtools/parser/: parser.py
ocxtools/renderer/: __init__.py  cli.py  renderer.py
ocxtools/reporter/: cli.py  dataclass.py  report_manager.py  reporter.py
ocxtools/serializer/: __init__.py  cli.py  serializer.py
ocxtools/utils/: utilities.py
ocxtools/validator/: cli.py  dataclasses.py  factory.py  validator_client.py  validator_report.py
readme/: changelog.html  docker.html  docker.md  ocxtools.html  validate.html  validate.md
tests/: conftest.py  test_cli.py  test_cli_report.py  test_clients.py  test_converter.py  test_loader.py  test_ocx_version_manager.py  test_parser.py  test_renderer.py  test_reporter.py  test_serializer.py  test_utilities.py  test_validator_client.py  test_validator_report.py
tests/data/: AVEVA-E3D-Model01.3docx  M1.3docx  M2.3docx  M3.3docx  M4.3docx  M4_NURBS.3docx  M5.3docx  M6.3docx  M7.3docx  M8.3docx  NAPA-OCX_M1.3docx  NAPA-OCX_M1_v300rc3.3docx  NAPA-OCX_M2.3docx  NAPA-OCX_M2_v300rc3.3docx  NAPA-OCX_M3.3docx  NAPA-OCX_M3_v300rc3.3docx  NAPA-OCX_M4.3docx  NAPA-OCX_M4_v300rc3.3docx  NAPA-OCX_M5.3docx  NAPA-OCX_M5_v300rc3.3docx  NAPA-OCX_M6.3docx  NAPA-OCX_M6_v300rc3.3docx  NAPA-OCX_M7.3docx  box.3docx  (+7 more)
(+12 files in other folders)
